[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://resources/Map.svg" type="Texture" id=2]
[ext_resource path="res://resources/Pixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/Speed.svg" type="Texture" id=5]
[ext_resource path="res://resources/Sort.svg" type="Texture" id=6]
[ext_resource path="res://resources/ButtonFilled.tres" type="StyleBox" id=7]
[ext_resource path="res://resources/Refresh.svg" type="Texture" id=8]
[ext_resource path="res://scripts/Spinner.gd" type="Script" id=9]
[ext_resource path="res://LobbyEntry.tscn" type="PackedScene" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.85098, 0.85098, 0.85098, 1 )
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 16

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 210.0
margin_top = 40.0
margin_right = 430.0
margin_bottom = 80.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Multiplayer Pong"
align = 1
valign = 1

[node name="Navigator" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Options" type="Panel" parent="Navigator"]
anchor_right = 1.0
margin_bottom = 427.0
custom_styles/panel = SubResource( 1 )

[node name="Map" type="Control" parent="Navigator/Options"]
margin_left = 10.0
margin_top = 15.8946
margin_right = 50.0
margin_bottom = 55.8946

[node name="Icon" type="TextureRect" parent="Navigator/Options/Map"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 35.0
margin_bottom = 35.0
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Navigator/Options/Map"]
margin_left = 35.0
margin_right = 95.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Map"

[node name="Classic" parent="Navigator/Options/Map" instance=ExtResource( 4 )]
margin_left = -5.14597
margin_top = 45.0
margin_right = 104.854
margin_bottom = 105.0
text = "Classic"

[node name="Wall" parent="Navigator/Options/Map" instance=ExtResource( 4 )]
margin_left = 155.0
margin_top = 42.7839
margin_right = 265.0
margin_bottom = 102.784
text = "Wall"

[node name="Difficulty" type="Control" parent="Navigator/Options"]
margin_left = 10.0
margin_top = 127.702
margin_right = 50.0
margin_bottom = 167.702

[node name="Icon" type="TextureRect" parent="Navigator/Options/Difficulty"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 35.0
margin_bottom = 35.0
texture = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="Navigator/Options/Difficulty"]
margin_left = 35.0
margin_right = 176.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Difficulty"

[node name="Easy" parent="Navigator/Options/Difficulty" instance=ExtResource( 4 )]
margin_left = 0.320877
margin_top = 45.0
margin_right = 110.321
margin_bottom = 105.0
text = "Easy"

[node name="Medium" parent="Navigator/Options/Difficulty" instance=ExtResource( 4 )]
margin_left = 155.0
margin_top = 45.0
margin_right = 265.0
margin_bottom = 105.0
text = "Medium"

[node name="Hard" parent="Navigator/Options/Difficulty" instance=ExtResource( 4 )]
margin_left = 311.83
margin_top = 45.0
margin_right = 421.83
margin_bottom = 105.0
text = "Hard"

[node name="Sort" type="Control" parent="Navigator/Options"]
margin_left = 10.0
margin_top = 242.064
margin_right = 50.0
margin_bottom = 282.064

[node name="Icon" type="TextureRect" parent="Navigator/Options/Sort"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 35.0
margin_bottom = 35.0
texture = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="Navigator/Options/Sort"]
margin_left = 35.0
margin_right = 170.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sort"

[node name="SortAge" parent="Navigator/Options/Sort" instance=ExtResource( 4 )]
margin_left = -6.57004
margin_top = 45.0
margin_right = 103.43
margin_bottom = 105.0
custom_styles/panel = ExtResource( 7 )
text = "Age"
filled = true

[node name="SortDifficulty" parent="Navigator/Options/Sort" instance=ExtResource( 4 )]
margin_left = 155.0
margin_top = 45.0
margin_right = 281.0
margin_bottom = 105.0
text = "Difficulty"

[node name="SortDescending" parent="Navigator/Options/Sort" instance=ExtResource( 4 )]
margin_left = 330.833
margin_top = 45.0
margin_right = 350.833
margin_bottom = 105.0
custom_styles/panel = ExtResource( 7 )
text = ""
filled = true
texture = ExtResource( 6 )
text_scale = 0.621

[node name="SortAscending" parent="Navigator/Options/Sort" instance=ExtResource( 4 )]
margin_left = 398.213
margin_top = 104.833
margin_right = 418.213
margin_bottom = 164.834
rect_rotation = 180.0
rect_scale = Vector2( -1, 1 )
text = ""
texture = ExtResource( 6 )
text_scale = 0.621

[node name="SearchPanel" type="Panel" parent="Navigator/Options"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.0
margin_top = -64.0
margin_right = -12.0
margin_bottom = -14.0
custom_styles/panel = SubResource( 3 )

[node name="Search" type="LineEdit" parent="Navigator/Options/SearchPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 17.0
margin_right = -15.0
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.490196, 0.490196, 0.490196, 1 )
placeholder_text = "Search by name..."

[node name="CreateGame" type="Panel" parent="Navigator"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -185.76
margin_bottom = -89.76
custom_styles/panel = SubResource( 6 )

[node name="CreateGame" parent="Navigator/CreateGame" instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.0
margin_top = -28.0
margin_right = 139.0
margin_bottom = 28.0
custom_styles/panel = ExtResource( 7 )
text = "Create game"
filled = true

[node name="Lobbies" type="Panel" parent="Navigator"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 436.0
margin_bottom = -191.0
custom_styles/panel = SubResource( 7 )

[node name="Spinner" type="TextureRect" parent="Navigator/Lobbies"]
modulate = Color( 0.709804, 0.709804, 0.709804, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 48, 48 )
texture = ExtResource( 8 )
script = ExtResource( 9 )

[node name="LobbyTemplate" parent="Navigator/Lobbies" instance=ExtResource( 10 )]

[node name="List" type="Control" parent="Navigator/Lobbies"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.56827
margin_right = 1.56827

[node name="Page" type="Panel" parent="Navigator"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -85.0
custom_styles/panel = SubResource( 8 )

[node name="Refresh" parent="Navigator/Page" instance=ExtResource( 4 )]
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -31.5
margin_right = 80.0
margin_bottom = 28.5
text = "<<"
texture = ExtResource( 8 )

[node name="First" parent="Navigator/Page" instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -348.0
margin_top = -31.5
margin_right = -288.0
margin_bottom = 28.5
text = "<<"

[node name="Previous" parent="Navigator/Page" instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -236.1
margin_top = -31.5
margin_right = -176.1
margin_bottom = 28.5
text = "<"

[node name="Page" type="Label" parent="Navigator/Page"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -142.81
margin_top = -13.0
margin_right = -102.81
margin_bottom = 13.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 1
valign = 1

[node name="Next" parent="Navigator/Page" instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -32.357
margin_right = -20.0
margin_bottom = 27.643
text = ">"
[connection signal="clicked" from="Navigator/Options/Map/Classic" to="." method="_on_Classic_clicked"]
[connection signal="clicked" from="Navigator/Options/Map/Wall" to="." method="_on_Wall_clicked"]
[connection signal="clicked" from="Navigator/Options/Difficulty/Easy" to="." method="_on_Easy_clicked"]
[connection signal="clicked" from="Navigator/Options/Difficulty/Medium" to="." method="_on_Medium_clicked"]
[connection signal="clicked" from="Navigator/Options/Difficulty/Hard" to="." method="_on_Hard_clicked"]
[connection signal="clicked" from="Navigator/Options/Sort/SortAge" to="." method="_on_SortAge_clicked"]
[connection signal="clicked" from="Navigator/Options/Sort/SortDifficulty" to="." method="_on_SortDifficulty_clicked"]
[connection signal="clicked" from="Navigator/Options/Sort/SortDescending" to="." method="_on_SortDescending_clicked"]
[connection signal="clicked" from="Navigator/Options/Sort/SortAscending" to="." method="_on_SortAscending_clicked"]
[connection signal="text_changed" from="Navigator/Options/SearchPanel/Search" to="." method="_on_Search_text_changed"]
[connection signal="clicked" from="Navigator/CreateGame/CreateGame" to="." method="_on_CreateGame_clicked"]
[connection signal="selected" from="Navigator/Lobbies/LobbyTemplate" to="." method="_on_LobbyTemplate_selected"]
[connection signal="clicked" from="Navigator/Page/Refresh" to="." method="_on_Refresh_clicked"]
[connection signal="clicked" from="Navigator/Page/First" to="." method="_on_First_clicked"]
[connection signal="clicked" from="Navigator/Page/Previous" to="." method="_on_Previous_clicked"]
[connection signal="clicked" from="Navigator/Page/Next" to="." method="_on_Next_clicked"]
